--- a/HTML/tablaGrupo.html
+++ b/HTML/tablaGrupo.html
@@ -27,7 +27,7 @@
          			<img src="..//recursos/img/ESPE.png" width="30%">
          			<h1 style="color: #fff;">Grupo 5</h1>
          			<hr>
-					<table class="table table-bordered table-hover table-condensed color5">
+					<table class="table table-bordered table-hover table-condensed">
 	    				<thead class="color3">
 	      				<tr>
 	      					<th class="text-center" >#</th>
