--- a/HTML/formularioContacto.html
+++ b/HTML/formularioContacto.html
@@ -17,34 +17,38 @@
       <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
       <script src="..//js/validar.js"></script>
     </head>
-    <body>
+    <body class="color5">
       <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
       <!--------------------------------MI SCRIPT------------------------------->
       <div class="container">
-        <div class="row col-centered" style="margin-top: 20%;">
-          <div class="col-sm-6 col-md-6 col-lg-6 color1">
+        <div class="row col-centered" style="margin-top: 10%;">
+          <div class="col-sm-6 col-md-6 col-lg-6 color9">
             <form onsubmit="validar();">
-              <h2 class="text-center">Contacto</h2>
+              <h2 class="text-center" style="color: #fff;">Contacto</h2>
               <div class="form-group">
-                <label for="txtEmail" style="margin-top: 20px; margin-bottom: 10px;">Correo Electronico:</label>
+                <label for="txtEmail" style="margin-top: 20px; margin-bottom: 10px; color: #fff;" >Correo Electronico:</label>
                 <div class="row">
                   <div class="col-xs-8 col-sm-8 col-md-9 col-lg-9" style="padding-left: 3%;">
                     <input type="text" class="formatorInput form-control" id="txtEmail" name="txtEmail" placeholder="&#9993; usuario@mail.com" required>
                   </div>
                   <div class="col-xs-2 col-sm-2 col-md-3 col-lg-3">
-                    <button class="btn btn-primary" title="Expresion Regular" data-toggle="popover" data-placement="right" data-content="/^[a-z][\w.-]+@\w[\w.-]+\.[\w.-]*[a-z][a-z]$/i" onclick="validarCorreo();">Verificar</button>
+                    <button class="button" title="Expresion Regular" data-toggle="popover" data-placement="right" data-content="/^[a-z][\w.-]+@\w[\w.-]+\.[\w.-]*[a-z][a-z]$/i" onclick="validarCorreo();">
+                      <span class="shadow"></span>
+                      <span class="edge"></span>
+                      <span class="front text"> <a href="#" style="font-size: 15px; color: #fff;">Validar</a></span>
+                    </button>
                   </div>
                 </div>
               </div>
               <hr>
               <div class="form-group">
-                <label for="fecha" style="margin-top: 10px; margin-bottom: 10px;">Fecha de Nacimiento</label>
+                <label for="fecha" style="margin-top: 10px; margin-bottom: 10px; color: #fff;">Fecha de Nacimiento</label>
                 <input type="date" class="formatorInput form-control" disabled name="txtFecha" id="fecha">
               </div>
               <div class="form-group">
-                <label for="txtTelefono">Teléfono</label>
+                <label for="txtTelefono" style="color: #fff;">Teléfono</label>
                 <input type="text" class="formatorInput form-control" disabled id="txtTelefono" name="txtTelefono" placeholder="&#9742; Telefono" required>
               </div>
               <div class="form-group">
