--- a/HTML/formulario.html
+++ b/HTML/formulario.html
@@ -56,7 +56,7 @@
         <div class="container" style="margin-top: 2%;">
         	<div class="row col-centered ">
         		<div class="colsm-10 col-md-10 col-lg-10 color8 text-center " style="width: 60%;">
-        			<div class="col-centered"><img class ="img-responsive logo img-circle color7" src="..//recursos/img/ESPE.png" width="150px"></div>
+        			<div class="col-centered"><img class ="img-responsive logo img-circle color7" src="..//Recursos/img/ESPE.png" width="150px"></div>
         			<div>
 	                    <h1 class="text-center">Grupo 5</h1>
 	                    <hr>
