--- a/HTML/tablaGrupo.html
+++ b/HTML/tablaGrupo.html
@@ -24,7 +24,7 @@
          <div class="container col-centered" style="padding: 100px;">
          	<div class="col-sm-10 col-md-10 col-lg-10 col-centered" style="width: 60%;" >
          		<div class="jumbotron color8 text-center">
-         			<img src="..//recursos/img/ESPE.png" width="30%">
+         			<img src="..//Recursos/img/ESPE.png" width="30%">
          			<h1 style="color: #fff;">Grupo 5</h1>
          			<hr>
 					<table class="table table-bordered table-hover table-condensed">
